# piservo0

./: .gitignore  .gitmodules  .markdown-preview.html  GEMINI.md  GEMINI2.md  GeminiCli.log1  Memo.md  README.md  REFERENCE.md  ToDo.md  \  foo.txt  pyproject.toml  servo.json
docs/: .markdown-preview.html  JSONCMD_SAMPLES.md  JSON_CMD.md  Memo1.md  REFERENCE.md  STR_CLIENT.md  STR_CMD.md  WEB_API.md  api_reference.rst  conf.py  index.rst
docs/_build/html/: .buildinfo  MEMO-keybindings.html  REFERENCE.html  api_reference.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: MEMO-keybindings.doctree  REFERENCE.doctree  api_reference.doctree  environment.pickle  index.doctree
docs/_build/html/_sources/: MEMO-keybindings.md.txt  REFERENCE.md.txt
docs/_build/html/_static/: documentation_options.js
piservo0/: __init__.py  __main__.py  calibrable_servo.py  cmd_calib.py  cmd_echo.py  cmd_multi.py  cmd_servo.py  multi_servo.py  my_logger.py  pigpio.py  piservo.py  pose_interpreter.py  servo_config_manager.py  str_cmd.py  str_control.py  thr_worker.py  thread_multi_servo.py  thread_worker.py
piservo0/command/: cmd_apiclient.py  cmd_calib.py  cmd_multi.py  cmd_servo.py  cmd_strclient.py  cmd_strctrl.py  cmd_webclient.py
piservo0/core/: calibrable_servo.py  multi_servo.py  piservo.py
piservo0/helper/: cmd_to_json.md  cmd_to_json.py  str_cmd_to_json.md  str_cmd_to_json.py  str_control.py  str_to_json.py  thread_multi_servo.py  thread_worker.py
piservo0/utils/: click_utils.py  my_logger.py  servo_config_manager.py
piservo0/web/: api.py  api_client.py  json_api.py  json_api_client.py  sample-json.js  sample_json.js  str_api.py  str_api_client.py
samples/: .tiny_robot.py.swo  README.md  sample.py  sample2.py  sample3.py  sample_01_piservo.py  sample_02_calibrable_servo.py  sample_03_multi_servo.py  sample_04_synchronized_servo_dance.py  sample_05_synchronized_pose_demo.py  sample_06_calibration_tool.py  sample_multi_random.py  sample_servo.json  sample_tiny_robot1.py  servo_tool.py  tiny_robot.py  tiny_robot1.py
samples/tiny_robot/: .#web.py  README.md  __init__.py  __main__.py  app.py  demo1.py  exec.py  manual.py  right.txt  script1-walk.txt  script2-hi.txt  script3-happy.txt  thr_manual.py  thr_worker.py  tiny_robot_app.py  util.py  walk1.txt  walk2.txt  web.py
tasks/: 01_specification_analysis.md  02_document_correction.md
tests/: README.md  TEST_04_MULTI_SERVO.md  conftest.py  test_01_piservo.py  test_02_calibrable_servo.py  test_02_servo_config_manager.py  test_03_calibrable_servo.py  test_03_multi_servo.py  test_04_config_save.py  test_04_multi_servo.py  test_04_servo_config_manager.py  test_05_pose_interpreter.py  test_05_servo_tool.py  test_05_str_control.py  test_05_thread_multi_servo.py  test_06_cmd_echo.py  test_06_thread_worker.py  test_07_cli_servo.py  test_07_cmd_servo.py  test_07_thread_multi_servo.py  test_08_cmd_calib.py  test_08_str_to_json.py  test_09_cmd_multi.py  test_09_cmd_to_json.py  test_multi_servo.py  test_piservo.py  test_sample.py
