[project]
name = "piservo0"
dynamic = ["version"]
description = "Python library for servo motor control."
readme = "README.md"
authors = [
    { name = "Yoichi Tanibayashi", email = "yoichi@tanibayashi.jp" }
]
requires-python = ">=3.11"
dependencies = [
    "click",
    "pigpio",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project.optional-dependencies]
dev = [
    "blessed",
]

samples = [
    "blessed",
    "fastapi",
    "unicorn>=2.1.3",
    "uvicorn",
]

[project.scripts]
piservo0 = "piservo0.__main__:cli"

[tool.ruff]
line-length = 78
target-version = "py311"
lint.select = ["E", "F", "I"]
#lint.ignore = ["R0902"]
exclude = ["tests/data"]

[tool.pytest.ini_options]
pythonpath = "tests"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-mock",
    "ruff>=0.12.3", 
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "pylint>=3.3.7",
]

[[tool.mypy.overrides]]
module = ['pigpio', 'fastapi']
#ignore_untyped_imports = true
ignore_missing_imports = true
